--- a/practice1_Hello-Sass/index.html
+++ b/practice1_Hello-Sass/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hello Sass</title>
-    <link rel="stylesheet" href="output/app.css">
+    <link rel="stylesheet" href="styles/css/app.css">
 </head>
 <body>
     <h1>Hello Sass</h1>
