--- a/practice1_Hello-Sass/index.html
+++ b/practice1_Hello-Sass/index.html
@@ -10,15 +10,10 @@
 
 <body>
     <h1>Hello Sass</h1>
-    <div class="container">
-        <ul>
-            <li><a href="#">go to folan ja </a></li>
-            <li><a href="#">go to folan ja </a></li>
-            <li><a href="#">go to folan ja </a></li>
-            <li><a href="#">go to folan ja </a></li>
-            <li><a href="#">go to folan ja </a></li>
-        </ul>
-    </div>
+
+    <h2>Box 1</h2>
+
+    <h3>Box 2</h3>
 </body>
 
 </html>
