--- a/practice1_Hello-Sass/index.html
+++ b/practice1_Hello-Sass/index.html
@@ -14,6 +14,10 @@
     <h2>Box 1</h2>
 
     <h3>Box 2</h3>
+
+    <h4 class="operator-1">test operation</h4>
+
+    <h4 class="operator-2">test operation 2</h4>
 </body>
 
 </html>
