--- a/practice1_Hello-Sass/index.html
+++ b/practice1_Hello-Sass/index.html
@@ -18,6 +18,8 @@
     <h4 class="operator-1">test operation</h4>
 
     <h4 class="operator-2">test operation 2</h4>
+
+    <h4 class="content">test @content</h4>
 </body>
 
 </html>
