practice 1 : conditional statement

--- a/practice1_Hello-Sass/index.html
+++ b/practice1_Hello-Sass/index.html
@@ -20,6 +20,8 @@
     <h4 class="operator-2">test operation 2</h4>
 
     <h4 class="content">test @content</h4>
+
+    <h4 class="conditioning">test conditioning</h4>
 </body>
 
 </html>
