--- a/practice1_Hello-Sass/index.html
+++ b/practice1_Hello-Sass/index.html
@@ -22,6 +22,8 @@
     <h4 class="content">test @content</h4>
 
     <h4 class="conditioning">test conditioning</h4>
+
+    <h4 class="inheritence">test inheritence</h4>
 </body>
 
 </html>
