practice 2 : handle header

--- a/practice2_project/index.html
+++ b/practice2_project/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="header-left">
+            <span class="header-left__text">Botostart</span>
+        </div>
+        <div class="header-right">
+            <nav class="header-right-nav">
+                <a class="header-right-nav__item" href="#">Home</a>
+                <a class="header-right-nav__item" href="#">About</a>
+                <a class="header-right-nav__item" href="#">Support</a>
+            </nav>
+            <img class="header-right__icon" src="Logo.png" alt="logo image">
+        </div>
+    </header>
 </body>
 </html>
