practice 2 : handle hamburger menu

--- a/practice2_project/index.html
+++ b/practice2_project/index.html
@@ -18,6 +18,11 @@
                 <a class="header-right-nav__item" href="#">Support</a>
             </nav>
             <img class="header-right__icon" src="Logo.png" alt="logo image">
+            <div class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </header>
 </body>
