--- a/practice2_project/index.html
+++ b/practice2_project/index.html
@@ -17,7 +17,7 @@
                 <a class="header-right-nav__item" href="#">About</a>
                 <a class="header-right-nav__item" href="#">Support</a>
             </nav>
-            <img class="header-right__icon" src="Logo.png" alt="logo image">
+            <img class="header-right__icon" src="Logo.png" alt="logo image" />
             <div class="hamburger-menu">
                 <span></span>
                 <span></span>
@@ -25,5 +25,40 @@
             </div>
         </div>
     </header>
+    <main class="main">
+        <div class="main-top-container">
+            <div class="main-left">
+                <a class="main-left__item" href="#">
+                    Javascript course
+                </a>
+                <a class="main-left__item" href="#">
+                    HTML&CSS course
+                </a>
+                <a class="main-left__item" href="#">
+                    Mobile first course
+                </a>
+                <a class="main-left__item" href="#">
+                    Sass course
+                </a>
+            </div>
+            <div class="main-right">
+                <img class="main-right__image" src="Logo.png" alt="logo image" />
+                <h1 class="main-right__title">
+                    Botostart
+                </h1>
+                <p class="main-right__description">
+                    A Website for programmers
+                </p>
+            </div>
+        </div>
+
+    </main>
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 </html>
