practice 2 : handle cards

--- a/practice2_project/index.html
+++ b/practice2_project/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/css/style.css">
 </head>
+
 <body>
     <header>
         <div class="header-left">
@@ -28,37 +30,50 @@
     <main class="main">
         <div class="main-top-container">
             <div class="main-left">
-                <a class="main-left__item" href="#">
-                    Javascript course
-                </a>
-                <a class="main-left__item" href="#">
-                    HTML&CSS course
-                </a>
-                <a class="main-left__item" href="#">
-                    Mobile first course
-                </a>
-                <a class="main-left__item" href="#">
-                    Sass course
-                </a>
+                <a class="main-left__item" href="#"> Javascript course </a>
+                <a class="main-left__item" href="#"> HTML&CSS course </a>
+                <a class="main-left__item" href="#"> Mobile first course </a>
+                <a class="main-left__item" href="#"> Sass course </a>
             </div>
             <div class="main-right">
                 <img class="main-right__image" src="Logo.png" alt="logo image" />
-                <h1 class="main-right__title">
-                    Botostart
-                </h1>
-                <p class="main-right__description">
-                    A Website for programmers
-                </p>
+                <h1 class="main-right__title"> Botostart </h1>
+                <p class="main-right__description"> A Website for programmers </p>
             </div>
         </div>
-
+        <div class="main-carts-container">
+            <div class="card">
+                <img class="card__image" src="Logo.png" alt="card image" />
+                <h3 class="card__title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente, temporibus
+                    facilis, aliquid adipisci quisquam ad, in sunt magni eos omnis vitae?</h3>
+                <p class="card__text">Mahdi Alaee</p>
+            </div>
+            <div class="card">
+                <img class="card__image" src="Logo.png" alt="card image" />
+                <h3 class="card__title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente, temporibus
+                    facilis, aliquid adipisci quisquam ad, in sunt magni eos omnis vitae?</h3>
+                <p class="card__text">Mahdi Alaee</p>
+            </div>
+            <div class="card">
+                <img class="card__image" src="Logo.png" alt="card image" />
+                <h3 class="card__title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente, temporibus
+                    facilis, aliquid adipisci quisquam ad, in sunt magni eos omnis vitae?</h3>
+                <p class="card__text">Mahdi Alaee</p>
+            </div>
+            <div class="card">
+                <img class="card__image" src="Logo.png" alt="card image" />
+                <h3 class="card__title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente, temporibus
+                    facilis, aliquid adipisci quisquam ad, in sunt magni eos omnis vitae?</h3>
+                <p class="card__text">Mahdi Alaee</p>
+            </div>
+        </div>
+        </div>
     </main>
-
-
     <br>
     <br>
     <br>
     <br>
     <br>
 </body>
+
 </html>
