practice 2 : handle footer

--- a/practice2_project/index.html
+++ b/practice2_project/index.html
@@ -69,11 +69,22 @@
         </div>
         </div>
     </main>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <footer>
+        <p class="footer__summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae laudantium, cum
+            unde suscipit tempora quae! Asperiores, voluptate beatae voluptates sed dicta optio minima enim ea eveniet
+            neque. Omnis, sapiente inventore?</p>
+        <ul class="footer__links">
+            <li class="footer__link-item">
+                <a class="footer__link" href="#">Privacy</a>
+            </li>
+            <li class="footer__link-item">
+                <a class="footer__link" href="#">Contact us</a>
+            </li>
+            <li class="footer__link-item">
+                <a class="footer__link" href="#">News</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
